--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <resources>
-  <color name="splashscreen_background">#3B82F6</color>
-  <color name="iconBackground">#3B82F6</color>
+  <color name="splashscreen_background">#0F172A</color>
+  <color name="iconBackground">#0F172A</color>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#3B82F6</color>
+  <color name="colorPrimaryDark">#0F172A</color>
   <color name="notification_icon_color">#3B82F6</color>
 </resources>
